[gd_scene load_steps=4 format=2]

[ext_resource path="res://M484BulletCollection2.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy_projectile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[node name="EnemyProjectile" type="Area2D"]
collision_layer = 3
script = ExtResource( 2 )
speed = 75.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 235.489, 109.387, 8.84608, 8.84607 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="on_area_entered"]
[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="on_screen_exited"]
